--- a/app/src/main/res/layout/adapter_car_list_item.xml
+++ b/app/src/main/res/layout/adapter_car_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.tubb.smrv.SwipeHorizontalMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/sml"
+    android:id="@+id/message_list_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:sml_auto_open_percent="0.2"
