--- a/app/src/main/res/layout/adapter_request_list_item.xml
+++ b/app/src/main/res/layout/adapter_request_list_item.xml
@@ -105,6 +105,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Denied" />
+
+                <Button
+                    android:id="@+id/cancel_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@android:string/cancel" />
             </LinearLayout>
         </LinearLayout>
 
