--- a/app/src/main/res/layout/sheet_passenger_route.xml
+++ b/app/src/main/res/layout/sheet_passenger_route.xml
@@ -51,10 +51,24 @@
                     android:text="Name" />
 
                 <TextView
+                    android:id="@+id/route_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Route status" />
+
+                <TextView
                     android:id="@+id/location_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/car_change_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Change car" />
 
                 <TextView
                     android:id="@+id/textView10"
@@ -91,6 +105,13 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Number" />
+
+                <Button
+                    android:id="@+id/action_run_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Run" />
 
                 <LinearLayout
                     android:id="@+id/request_info"
