--- a/app/src/main/res/layout/sheet_passenger.xml
+++ b/app/src/main/res/layout/sheet_passenger.xml
@@ -35,35 +35,13 @@
                     android:layout_weight="1"
                     android:text="Full name" />
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Route"
-                    android:textStyle="bold|italic" />
-
-                <TextView
-                    android:id="@+id/route_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Name" />
-
-                <TextView
-                    android:id="@+id/route_status"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Route status" />
-
                 <LinearLayout
                     android:id="@+id/location_info"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <Button
                         android:id="@+id/location_btn"
@@ -89,58 +67,6 @@
 
                 </LinearLayout>
 
-                <Button
-                    android:id="@+id/car_change_btn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Change car"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Car"
-                    android:textStyle="bold|italic" />
-
-                <TextView
-                    android:id="@+id/car_model"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Model" />
-
-                <ImageView
-                    android:id="@+id/car_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/googleg_standard_color_18" />
-
-                <TextView
-                    android:id="@+id/car_brand"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Brand" />
-
-                <TextView
-                    android:id="@+id/car_number"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Number" />
-
-                <Button
-                    android:id="@+id/route_action_btn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Run"
-                    android:visibility="gone" />
-
                 <LinearLayout
                     android:id="@+id/request_info"
                     android:layout_width="match_parent"
@@ -159,12 +85,15 @@
                         android:id="@+id/request_message"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Request message" />
+                        android:text="TextView" />
 
                     <EditText
                         android:id="@+id/request_message_inp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:gravity="start|top"
                         android:hint="Message to driver"
                         android:inputType="textMultiLine" />
 
